Add video-based portfolio with compressed videos and project descriptions

--- a/index.html
+++ b/index.html
@@ -227,46 +227,109 @@
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-robotics">Robotics</li>
-            <li data-filter=".filter-software">Software</li>
-            <li data-filter=".filter-script">Script</li>
+            <li data-filter=".filter-roboteam">RoboTeam</li>
+            <li data-filter=".filter-university">University</li>
+            <li data-filter=".filter-quadriga">QuadrigaUT</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
-            <!-- TODO: Add your portfolio projects here. Example item: -->
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-robotics">
+            <!-- RoboTeam Twente -->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-roboteam">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
+                <video class="img-fluid" autoplay loop muted playsinline>
+                  <source src="assets/img/my_photos/RobotTeam/AI_football_robots.mp4" type="video/mp4">
+                </video>
                 <div class="portfolio-info">
-                  <h4>Project 1</h4>
-                  <p>Add project description</p>
-                  <a href="assets/img/portfolio/app-1.jpg" title="Project 1" data-gallery="portfolio-gallery-robotics" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <h4>RoboTeam Twente - AI Decision Algorithm</h4>
+                  <p>Autonomous football team AI &amp; decision-making system</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-software">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-roboteam">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/product-1.jpg" class="img-fluid" alt="">
+                <video class="img-fluid" autoplay loop muted playsinline>
+                  <source src="assets/img/my_photos/RobotTeam/passing_ball_compressed.mp4" type="video/mp4">
+                </video>
                 <div class="portfolio-info">
-                  <h4>Project 2</h4>
-                  <p>Add project description</p>
-                  <a href="assets/img/portfolio/product-1.jpg" title="Project 2" data-gallery="portfolio-gallery-software" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <h4>RoboTeam Twente - Ball Passing</h4>
+                  <p>Shooting capabilities demonstration</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-script">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-roboteam">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/branding-1.jpg" class="img-fluid" alt="">
+                <video class="img-fluid" autoplay loop muted playsinline>
+                  <source src="assets/img/my_photos/RobotTeam/robot_showcacse.mp4" type="video/mp4">
+                </video>
                 <div class="portfolio-info">
-                  <h4>Project 3</h4>
-                  <p>Add project description</p>
-                  <a href="assets/img/portfolio/branding-1.jpg" title="Project 3" data-gallery="portfolio-gallery-script" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <h4>RoboTeam Twente - Robot Showcase</h4>
+                  <p>Control Engineer | Autonomous football robot</p>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <!-- University Projects -->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-university">
+              <div class="portfolio-content h-100">
+                <video class="img-fluid" autoplay loop muted playsinline>
+                  <source src="assets/img/my_photos/University Projects/midas_yolo_compressed.mp4" type="video/mp4">
+                </video>
+                <div class="portfolio-info">
+                  <h4>Helmet Detection Robot</h4>
+                  <p>YOLO detection &amp; MIDAS depth estimation for helmet-following robot</p>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-university">
+              <div class="portfolio-content h-100">
+                <video class="img-fluid" autoplay loop muted playsinline>
+                  <source src="assets/img/my_photos/University Projects/ML_robots_compressed.mp4" type="video/mp4">
+                </video>
+                <div class="portfolio-info">
+                  <h4>Shape-Shifting ML Swarm</h4>
+                  <p>Machine learning swarm that takes on the shape you draw</p>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-university">
+              <div class="portfolio-content h-100">
+                <video class="img-fluid" autoplay loop muted playsinline>
+                  <source src="assets/img/my_photos/University Projects/Reinforcement_Learning_PPO.mp4" type="video/mp4">
+                </video>
+                <div class="portfolio-info">
+                  <h4>Reinforcement Learning - PPO</h4>
+                  <p>PPO agent learning to drive a race track course</p>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-university">
+              <div class="portfolio-content h-100">
+                <video class="img-fluid" autoplay loop muted playsinline>
+                  <source src="assets/img/my_photos/University Projects/simulation_output.mp4" type="video/mp4">
+                </video>
+                <div class="portfolio-info">
+                  <h4>6-DoF Robotic Arm</h4>
+                  <p>Simulink model with LQR, computed-torque &amp; Slotine-Li adaptive control</p>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <!-- QuadrigaUT -->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-quadriga">
+              <div class="portfolio-content h-100">
+                <div class="quadriga-logo-wrapper">
+                  <img src="assets/img/my_photos/QuadrigaUT/logo.png" class="img-fluid" alt="QuadrigaUT">
+                  <span class="badge-in-progress">In Progress</span>
+                </div>
+                <div class="portfolio-info">
+                  <h4>QuadrigaUT - NXP Cup</h4>
+                  <p>MPC control 4WD autonomous robot with mocap teacher+student ML</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
