--- a/service-details.html
+++ b/service-details.html
@@ -9,8 +9,9 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/my_photos/web_icon.svg" rel="icon" type="image/svg+xml">
+  <link href="assets/img/my_photos/web_icon.png" rel="icon" type="image/png">
+  <link href="assets/img/my_photos/web_icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
