Add dark mode for the webicon

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/my_photos/web_icon.svg" rel="icon" type="image/svg+xml">
-  <link href="assets/img/my_photos/web_icon.png" rel="icon" type="image/png">
+  <link href="assets/img/my_photos/web_icon.svg" rel="icon" type="image/svg+xml" media="(prefers-color-scheme: light)">
+  <link href="assets/img/my_photos/web_icon.png" rel="icon" type="image/png" media="(prefers-color-scheme: light)">
+  <link href="assets/img/my_photos/web_icon_white.svg" rel="icon" type="image/svg+xml" media="(prefers-color-scheme: dark)">
+  <link href="assets/img/my_photos/web_icon_white.png" rel="icon" type="image/png" media="(prefers-color-scheme: dark)">
   <link href="assets/img/my_photos/web_icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
