About me description added

--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
           <div class="col-lg-8 content">
             <h2>Robotics Engineer</h2>
             <p class="py-3">
-              <!-- TODO: Add your personal description here -->
-              Add your personal description here.
+              I'm a Robotics MSc student focused on control. In a university project I modelled a 6-DoF manipulator in MATLAB/Simulink and compared computed-torque, Slotine&ndash;Li, and LQR for trajectory tracking. I also worked as a control engineer at RoboTeam Twente, and I'm currently developing MPC for a 4WD autonomous robot (NXP Cup).
             </p>
           </div>
         </div>
