Update resume section

--- a/index.html
+++ b/index.html
@@ -179,19 +179,34 @@
 
             <div class="resume-item pb-0">
               <h4>Leonie Hoekstra</h4>
-              <p><em><!-- TODO: Add your summary --></em></p>
               <ul>
-                <li>Enschede, NL</li>
-                <!-- TODO: Add your contact details -->
+                <li>University of Twente, NL</li>
+                <li>Currently in Enschede, NL</li>
+                <li>leonie.hoekstra10@gmail.com</li>
               </ul>
             </div><!-- End Resume Item -->
 
             <h3 class="resume-title">Education</h3>
+
             <div class="resume-item">
-              <h4><!-- TODO: Add your degree --></h4>
-              <h5><!-- TODO: Add years --></h5>
-              <p><em>University of Twente, Enschede, NL</em></p>
-              <p><!-- TODO: Add description --></p>
+              <h4>Master Robotics</h4>
+              <p>Mechatronics &amp; Physical AI track</p>
+              <h5>2025 - ongoing</h5>
+              <p><em>University of Twente, NL</em></p>
+            </div><!-- End Resume Item -->
+
+            <div class="resume-item">
+              <h4>Exchange</h4>
+              <p>Focus on Digital and Analog Electronics, Embedded Systems</p>
+              <h5>2025</h5>
+              <p><em>Universidad Carlos III de Madrid (UC3M), ES</em></p>
+            </div><!-- End Resume Item -->
+
+            <div class="resume-item">
+              <h4>Bachelor Advanced Technology</h4>
+              <p>Minors: BioRobotics, Cyber Physical Systems</p>
+              <h5>2021 - 2024</h5>
+              <p><em>University of Twente, NL</em></p>
             </div><!-- End Resume Item -->
 
           </div>
@@ -199,12 +214,8 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Experience</h3>
             <div class="resume-item">
-              <h4><!-- TODO: Add your role --></h4>
-              <h5><!-- TODO: Add years --></h5>
-              <p><em><!-- TODO: Add company and location --></em></p>
-              <ul>
-                <li><!-- TODO: Add experience details --></li>
-              </ul>
+              <h4>Control Engineer</h4>
+              <p><em>RoboTeam Twente</em></p>
             </div><!-- End Resume Item -->
 
           </div>
