--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <li><a href="#skills"><i class="bi bi-gear navicon"></i> Skills</a></li>
         <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
-        <li><a href="#interests"><i class="bi bi-bar-chart navicon"></i> Interests</a></li>
+        <li><a href="#interests"><i class="bi bi-bar-chart navicon"></i> Focus Areas</a></li>
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contacts</a></li>
       </ul>
     </nav>
@@ -98,7 +98,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/my_photos/profile_pic.jpg" class="img-fluid" alt="">
+            <img src="assets/img/my_photos/1000059080.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>Robotics Engineer</h2>
@@ -148,11 +148,12 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
             <h4>Robotics Expertise</h4>
             <ul>
-              <li>Control</li>
-              <li>Robot Learning</li>
-              <li>Perception</li>
-              <li>Multi-robot Systems</li>
-              <!-- TODO: Add your expertise areas -->
+              <li>Model-based control (computed-torque, Slotine&ndash;Li)</li>
+              <li>Optimal control (LQR, MPC)</li>
+              <li>State estimation &amp; sensor fusion (Kalman filtering)</li>
+              <li>Robot kinematics &amp; dynamics</li>
+              <li>Motion planning</li>
+              <li>SLAM (LiDAR / visual)</li>
             </ul>
           </div>
 
@@ -215,7 +216,14 @@
             <h3 class="resume-title">Experience</h3>
             <div class="resume-item">
               <h4>Control Engineer</h4>
+              <h5>2023 - 2024</h5>
               <p><em>RoboTeam Twente</em></p>
+            </div><!-- End Resume Item -->
+
+            <div class="resume-item">
+              <h4>Exoskeleton Student Team STRIDE</h4>
+              <h5>2026 - ongoing</h5>
+              <p><em>Team formation &amp; project setup</em></p>
             </div><!-- End Resume Item -->
 
           </div>
@@ -355,12 +363,12 @@
 
     </section><!-- /Portfolio Section -->
 
-    <!-- Interests Section -->
+    <!-- Focus Areas Section -->
     <section id="interests" class="skills section">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Interests</h2>
+        <h2>Focus Areas</h2>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -370,50 +378,50 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill"><span>Python</span> <i class="val">90%</i></span>
+              <span class="skill"><span>Control Systems</span> <i class="val">95%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Focus Item -->
+
+            <div class="progress">
+              <span class="skill"><span>MATLAB / Simulink</span> <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-            </div><!-- End Skills Item -->
+            </div><!-- End Focus Item -->
 
             <div class="progress">
-              <span class="skill"><span>C/C++</span> <i class="val">85%</i></span>
+              <span class="skill"><span>Python</span> <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-            </div><!-- End Skills Item -->
-
-            <div class="progress">
-              <span class="skill"><span>MATLAB</span> <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
+            </div><!-- End Focus Item -->
 
           </div>
 
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill"><span>Robotics</span> <i class="val">95%</i></span>
+              <span class="skill"><span>C/C++</span> <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-            </div><!-- End Skills Item -->
+            </div><!-- End Focus Item -->
 
             <div class="progress">
-              <span class="skill"><span>Control Systems</span> <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
-
-            <div class="progress">
-              <span class="skill"><span>Machine Learning</span> <i class="val">80%</i></span>
+              <span class="skill"><span>Software Development</span> <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
-            </div><!-- End Skills Item -->
+            </div><!-- End Focus Item -->
+
+            <div class="progress">
+              <span class="skill"><span>AI / Machine Learning</span> <i class="val">75%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Focus Item -->
 
           </div>
 
@@ -421,7 +429,7 @@
 
       </div>
 
-    </section><!-- /Interests Section -->
+    </section><!-- /Focus Areas Section -->
 
     <!-- Contact Section -->
     <section id="contact" class="contact section">
